--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="col-xl-8 col-12">
               <div class="main-decorated-box text-center text-xl-left">
                 <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span><span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest d-block d-xl-flex font-weight-bold">frequency</span></h1>
-                <div class="decorated-subtitle text-italic text-white wow slideInLeft">the one you want to expirience.</div>
+                <div class="decorated-subtitle text-italic text-white wow slideInLeft">the one you want to experience.</div>
               </div>
             </div>
             <div class="col-12 text-center offset-top-75" data-wow-delay=".2s"><a class="button-way-point d-inline-block text-center d-inline-flex flex-column justify-content-center" href="#" data-custom-scroll-to="about"><span class="fa-chevron-down"></span></a></div>
@@ -142,7 +142,7 @@
 					I started the journey of life with a lot of obstacles to overcome. 
 					And I learned eventually, how to turn them to my benefit. 
 					How to transmute pain into creativity and grow at my own pace towards wherever my imagination can take me.   
-					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to the Earth of new frequency.  
+					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to the Earth of the new frequency.  
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
 					might have been triggered by narcissistic abuse or painful experiences. 
 					I help my clients to refocus from trauma bond, cognitive dissonance, or narcissistic abuse towards their potential and start exploring its true nature.</p>
@@ -183,7 +183,7 @@
 						Going through life with pain, trauma, and generational curses is never easy. 
 						It can become a nightmare when we are not aware of our powers and spiritual gifts. 
 						We all are meant to experience joy and bliss by birthright. 
-						Only using these emotions we can create Heaven on Earth. 
+						Only using these emotions can we create Heaven on Earth. 
 						I can show my clients patterns and ways to see and embrace this power.</p><span class="box-default-icon novi-icon icon-lg mercury-icon-target-2"></span>
                   </div>
                 </div>
@@ -192,9 +192,9 @@
                     <div class="box-default-title">Tarot</div>
                     <p class="box-default-description">
 						The tarot's "fool's journey" is the one I strongly believe we all are on. 
-						It is about jumping with faith and having experiences, the ones we want in fact. 
+						It is about making a leap of faith and having experiences, the ones we want in fact. 
 						It is about life cycles. 
-						Learning to accept them and after finishing one, choosing another in constant desire for growth. 
+						Learning to accept them and after finishing one, choosing another in a constant desire for growth. 
 						Tarot is a tool to connect with your spirit guides or your higher self. 
 						When we are guided we might learn quicker and experience more this lifetime.   </p><span class="box-default-icon novi-icon icon-lg mercury-icon-user"></span>
                   </div>
@@ -204,9 +204,9 @@
                     <div class="box-default-title">Counselling</div>
                     <p class="box-default-description">
 						There are no small problems. 
-						You are not meant to just deal with it. 
+						You are not meant to just cope with them. 
 						We are not designed to be strong and competitive. It is abuse. </br> 
-						We are here to be emotional, to explore, to learn. 
+						We are here to feel our emotions, to explore, to learn. 
 						We are here to love and find out again that we are just all it is ... <span class="default-letter-spacing font-weight-bold ">Energy.</span></br>
 						Recognizing blockages and removing them from my client's system is, I find, the most profound part of my work.		
 						</p><span class="box-default-icon novi-icon icon-lg mercury-icon-partners"></span>
@@ -232,7 +232,7 @@
             <div class="col-12 text-center col-md-10 col-lg-8">
               <div class="section-name wow fadeInRight" data-wow-delay=".2s">Pricing Options</div>
               <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">Find the perfect plan for<span class="text-primary"> your soul</span></h3>
-              <p class="wow price">I offer three different pricing plans that can help and fulfill my client's needs. Feel free to select a preferable plan or learn more about each of them below.</p>
+              <p class="wow price">I offer three different pricing plans that can help to fulfill my client's needs. Feel free to select a preferable plan or learn more about each of them below.</p>
             </div>
           </div>
           <div class="row row-30 justify-content-center">
