--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
                 <div class="team-classic-img"><img src="images/DrBruceLipton.jpg" alt="" width="370" height="198"/>
                 </div>
                 <div class="block-320 text-center">
-                  <h4 class="font-weight-bold">dr Bruce Lipton</h4><a href="https://www.brucelipton.com" target="_blank">www.brucelipton.com</a>
+                  <h4 class="font-weight-bold">Dr Bruce Lipton</h4><a href="https://www.brucelipton.com" target="_blank">www.brucelipton.com</a>
                   <p>Internationally recognized leader in bridging science and spirit.</p>
                   <hr class="offset-top-40"/>
                 </div>
