--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </div>
         <p>Loading...</p>
       </div>
-    </div><div class="section section-banner d-none d-xl-block" target="_blank" style="background-image: url(images/background-02-1920x60.jpg); background-image: -webkit-image-set( url(images/background-02-1920x60.jpg) 1x, url(images/background-02-3840x120.jpg) 2x )"><img src="images/foreground-02-1600x60.png" alt="" height="310"></div>
+    </div><div class="section section-banner d-none d-xl-block" target="_blank" style="background-image: url(images/background-02-1920x60.jpg); background-image: -webkit-image-set( url(images/background-02-1920x60.jpg) 1x, url(images/background-02-3840x120.jpg) 2x )">
+	<img src="images/foreground-02-1600x60.png" alt="" height="310" style="width:100%; height:auto; max-width:40px;"></div>
     <div class="page">
       <header class="section page-header">
         <!--RD Navbar-->
@@ -66,7 +67,7 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!--RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt=""/><img class="brand-logo-light" src="images/logo-inverse-200x34.png" alt="" width="100" height="17"/></a>
+                    <!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/><img class="brand-logo-light" src="images/logo-inverse-200x34.png" alt="" width="100" height="17"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-main-element">
