--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>Choose Frequency</title>
+    <title>Choose Frequency - Spiritual Life Coach</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +22,7 @@
         <p>Loading...</p>
       </div>
     </div><div class="section section-banner d-none d-xl-block" target="_blank" style="background-image: url(images/background-02-1920x60.jpg); background-image: -webkit-image-set( url(images/background-02-1920x60.jpg) 1x, url(images/background-02-3840x120.jpg) 2x )">
-	<img src="images/foreground-02-1600x60.png" alt="" height="310" style="width:100%; height:auto; max-width:40px;"></div>
+	<img src="images/foreground-02-1600x60.png" alt="" height="310" ></div>
     <div class="page">
       <header class="section page-header">
         <!--RD Navbar-->
