--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta class="metaTagTop" name="keywords" content="healing, hypnosis, Hypnotherapy, narcissistic abuse, narcissism, tarot, spirituality">
+	<meta class="metaTagTop" name="author" content="Gosia Witkowska">
     <link rel="icon" href="images/CF_LogoCircle.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="fonts/fontMonterrat.css">
     <link rel="stylesheet" href="css/bootstrap.css">
