--- a/about.html
+++ b/about.html
@@ -51,12 +51,11 @@
                     </div>
                   </li>
                 </ul>
-<!--                <ul class="social-links">
-                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-linkedin" href="#"></a></li>
-                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-twitter" href="#"></a></li>
-                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="#"></a></li>
-                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="#"></a></li>
-                </ul> -->
+				<ul class="social-links">
+                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA"></a></li>
+                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051"></a></li>
+                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/"></a></li>
+                </ul>
               </div>
             </div>
             <div class="rd-navbar-main-outer">
@@ -233,6 +232,16 @@
             </div>
           </div>
         </div>
+		<div class="container wow fadeInUp" data-wow-delay=".4s">
+          <div class="footer-classic-aside">
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved.</p>
+            <ul class="social-links">
+				<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA"></a></li>
+                <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051"></a></li>
+                <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/"></a></li>			
+            </ul>
+          </div>
+        </div>		
       </footer>
     </div>
     <div class="snackbars" id="form-output-global"></div>
