--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                   </li>
                 </ul>
                <ul class="social-links">
-                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA"></a></li>
-                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051"></a></li>
-                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/"></a></li>
+                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
+                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>
+                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>
                 </ul>
               </div>
             </div>
@@ -139,8 +139,11 @@
             <div class="col-lg-6 col-12">
               <div class="block-sm">
                 <div class="section-name wow fadeInRight" data-wow-delay=".2s">About me</div>
-                <h3 class="wow fadeInLeft text-capitalize devider-bottom" data-wow-delay=".3s">What I<span class="text-primary"> Do</span></h3>
-                <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
+                <h3 class="wow fadeInLeft text-capitalize devider-bottom" data-wow-delay=".3s">
+					What I<span class="text-primary"> Do </span>
+					<a class="fa-brands fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank" style="float: right"></a>
+				</h3>
+               <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
 					I started the journey of life with a lot of obstacles to overcome. 
 					And I learned eventually, how to turn them to my benefit. 
 					How to transmute pain into creativity and grow at my own pace towards wherever my imagination can take me.   
@@ -350,9 +353,9 @@
           <div class="footer-classic-aside">
             <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved.</p>
             <ul class="social-links">
-				<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA"></a></li>
-                <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051"></a></li>
-                <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/"></a></li>			
+				<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
+                <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>
+                <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>			
             </ul>
           </div>
         </div>
