--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
                       </li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a>
+                      </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                       </li>
                     </ul>
