--- a/JoSite/index.html
+++ b/JoSite/index.html
@@ -174,7 +174,7 @@
             </div>
           </div>
         </div>
-        <div class="box-image-item box-image-video novi-background bg-image" style="background-image: url(images/index-874x534.jpg)"><a class="icon novi-icon fa fa-caret-right" href="https://youtu.be/bmZMXwJlhAo" data-lightgallery="item"></a></div>
+        <div class="box-image-item box-image-video novi-background bg-image" style="background-image: url(images/index-874x534.jpg)"><a class="icon novi-icon fa fa-caret-right" href="https://youtube/embed/bmZMXwJlhAo" data-lightgallery="item"></a></div>
       </section>
       <!-- Our Mission-->
       <section class="section bg-default section-md">
