--- a/JoSite/index.html
+++ b/JoSite/index.html
@@ -13,7 +13,6 @@
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
-    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <div class="preloader">
       <div class="preloader-body">
         <div class="loader">
@@ -30,23 +29,12 @@
         <p>Loading...</p>
       </div>
     </div>
-    <div class="page"><a class="banner banner-top" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid.jpg" alt="" height="0"></a>
+    <div class="page">
       <header class="section page-header rd-navbar-transparent-wrap">
         <!--RD Navbar-->
         <div class="rd-navbar-wrap">
           <nav class="rd-navbar rd-navbar-transparent" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-static" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="20px" data-xl-stick-up-offset="20px" data-xxl-stick-up-offset="20px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
             <div class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle=".rd-navbar-collapse"><span></span></div>
-            <div class="rd-navbar-aside-outer rd-navbar-collapse">
-              <div class="rd-navbar-aside">
-                <div class="rd-navbar-info">
-                  <div class="icon novi-icon mdi mdi-phone"></div><a href="tel:#">+1 (800) 123 1234</a>
-                </div>
-                <ul class="list-lined">
-                  <li><a href="#">Log in</a></li>
-                  <li><a href="#">Create an account</a></li>
-                </ul>
-              </div>
-            </div>
             <div class="rd-navbar-main-outer">
               <div class="rd-navbar-main-inner">
                 <div class="rd-navbar-main">
@@ -55,9 +43,6 @@
                     <!--RD Navbar Toggle-->
                     <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                     <!--RD Navbar Brand-->
-                    <div class="rd-navbar-brand">
-                      <!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/logo-default-293x44.png" alt="" width="146" height="22"/><img class="brand-logo-light" src="images/logo-inverse-310x44.png" alt="" width="155" height="22"/></a>
-                    </div>
                   </div>
                   <div class="rd-navbar-main-element">
                     <div class="rd-navbar-nav-wrap">
@@ -78,42 +63,42 @@
             </div>
           </nav>
         </div>
-      </header>
+      </header>	
       <!--Swiper-->
       <section class="section swiper-container swiper-slider swiper-slider-1 context-dark" data-loop="true" data-autoplay="5000" data-simulate-touch="false">
         <div class="swiper-wrapper">
-          <div class="swiper-slide" data-slide-bg="images/index-1-slider-1-1920x768.jpg">
+          <div class="swiper-slide" data-slide-bg="images/Jo.png">
             <div class="swiper-slide-caption section-lg">
               <div class="container">
                 <div class="row">
                   <div class="col-md-9 col-lg-7 offset-md-1 offset-xxl-0">
-                    <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">Professional Accounting</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200">& Tax Services</span></h1>
-                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">Providing every client with the attention they deserve.</p>
+                    <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">Chelmsford Hypnotherapy</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200">with JO CLARK</span></h1>
+                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">Clinical Hypnotherapist, NLP Practitioner & Master Life Coach</p>
                     <div class="button-wrap-default" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-secondary-text" href="#">Read more</a></div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="swiper-slide" data-slide-bg="images/index-1-slider-2-1920x768.jpg">
+          <div class="swiper-slide" data-slide-bg="images/Jo2.png">
             <div class="swiper-slide-caption section-lg">
               <div class="container">
                 <div class="row">
                   <div class="col-md-9 col-lg-7 offset-md-1 offset-xxl-0">
-                    <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">Full Accounting Support</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200">for Your Business</span></h1>
-                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">Get rid of any accounting issues with our team’s assistance.</p>
+                    <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">Chelmsford Hypnotherapy</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200">with JO CLARK</span></h1>
+                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">Chelmsford Hypnotherapy is owned and run by myself, Jo Clark. Offering professional, personal and confidential hypnotherapy in Chelmsford is something I am passionate about.</p>
                     <div class="button-wrap-default" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-secondary-text" href="#">Read more</a></div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="swiper-slide" data-slide-bg="images/index-1-slider-3-1920x768.jpg">
+          <div class="swiper-slide" data-slide-bg="images/Jo3.png">
             <div class="swiper-slide-caption section-lg">
               <div class="container">
                 <div class="row">
                   <div class="col-md-9 col-lg-7 offset-md-1 offset-xxl-0">
-                    <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">#1 Tax Services Provider</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200">Since the Late 1990s</span></h1>
+                    <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">Chelmsford Hypnotherapy</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200">with JO CLARK</span></h1>
                     <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">We offer specialist tax knowledge and full 24/7 support.</p>
                     <div class="button-wrap-default" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-secondary-text" href="#">Read more</a></div>
                   </div>
@@ -139,23 +124,20 @@
           <div class="row row-30">
             <div class="col-md-4 wow fadeInUp">
               <div class="box-icon-2">
-                <div class="icon novi-icon mercury-icon-calc"></div>
-                <h5 class="title">Accounting Services</h5>
-                <p class="text">We offer a full range of comprehensive accounting services to companies throughout the US and European countries.</p>
+                <h5 class="title">Anxiety & Stress</h5>
+                <p class="text">I can help you learn to overcome anxiety and access alternative ways of dealing with and eventually beating it for good! Learn to alleviate stress, overcome those feelings of dread and avoid serious health implications.</p>
               </div>
             </div>
             <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
               <div class="box-icon-2">
-                <div class="icon novi-icon mercury-icon-chart"></div>
-                <h5 class="title">Income Tax</h5>
-                <p class="text">This Service allows you to submit and view your tax returns and receive instant notification of the return receipt.</p>
+                <h5 class="title">Depression</h5>
+                <p class="text">I help clients begin to create a positive vision of how they want things to be. Visualising positive outcomes and achievable goals can bring about real changes in attitude and perception. My approach helps clients eliminate depressive thoughts so they can focus on how they would like to feel and envision a positive and more fulfilling future.</p>
               </div>
             </div>
             <div class="col-md-4 wow fadeInUp" data-wow-delay="0.4s">
               <div class="box-icon-2">
-                <div class="icon novi-icon mercury-icon-time-sand"></div>
-                <h5 class="title">Financial Services</h5>
-                <p class="text">Our company provides various financial services including insurance, wealth management, tax consulting etc.</p>
+                <h5 class="title">Weight Management</h5>
+                <p class="text">With powerful hypnotic interventions and challenging the thoughts and feelings attached to food, we really can create a positive and healthy relationship with food and achieve those weight loss goals.</p>
               </div>
             </div>
           </div>
@@ -167,68 +149,40 @@
           <div class="row">
             <div class="col-md-6 wow fadeInLeft">
               <div class="section-lg section-lg-top-100">
-                <h2 class="title-icon title-icon-2"><span class="icon icon-default mercury-icon-touch"></span><span>Download Our <br><span class="text-light">Tax Guide App</span></span></h2>
-                <p class="big">We are glad to introduce our brand new Tax Guide App, a perfect solution for individual tax management our clients have been waiting for. It is available now for all iOS and Android device owners.</p>
-                <div class="group-sm group-wrap-2"><a class="button button-primary" href="#">Get iOS app</a><a class="button button-icon button-icon-right button-secondary" href="#"><span>Get Android app</span><span class="icon fa fa-android"></span></a></div>
+                <h2 class="title-icon title-icon-2"><span class="text-light">What is Hypnotherapy?</span></span></h2>
+                <p class="big">
+Hypnotherapy is a form of deep relaxation, I often compare it to the feelings you have just before you go to sleep, or just as soon as you start to awake. It feels lovely, safe and comfortable, with little or no awareness of any disharmony. It is a period of conscious shutdown, where everything still functions normally, with the help of the subconscious mind, but you are not consciously aware of it.
+It is an incredibly resourceful state as you are able to access the subconscious mind which is far more receptive to change, having significant therapeutic benefit.
+At Chelmsford Hypnotherapy, I can help you to alleviate physical symptoms associated with: IBS, back pain, dental procedures, fibromyalgia and migraines.
+Hypnotherapy is a powerful process that helps in overcoming childhood trauma, releasing the emotional impact of limiting beliefs.</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="box-image-item box-image-video novi-background bg-image" style="background-image: url(images/index-874x534.jpg)"><a class="icon novi-icon fa fa-caret-right" href="https://youtube/embed/bmZMXwJlhAo" data-lightgallery="item"></a></div>
+        <div class="box-image-item box-image-video novi-background bg-image" style="background-image: url(images/Video1.png)"><a class="icon novi-icon fa fa-caret-right" href="https://youtube/bmZMXwJlhAo" data-lightgallery="item"></a></div>
       </section>
       <!-- Our Mission-->
       <section class="section bg-default section-md">
         <div class="container">
           <div class="row row-30">
-            <div class="col-md-6">
-              <h2 class="title-icon"><span class="icon icon-default mercury-icon-target-2"></span><span>Our <span class="text-light">Mission</span></span></h2>
-              <p class="big">Our mission is to provide accounting and tax services of a superior quality. The responsive, personal attention we provide for each client, regardless how large or small, is the key to our approach.</p>
+            <div class="col-md-12">
+              <h2 class="title-icon"><span class="icon icon-default mercury-icon-target-2"></span><span>What Can Hypnotherapy <span class="text-light">be Used For?</span></span></h2>
+              <p class="big">At Chelmsford Hypnotherapy, you can get help with a wide variety of issues by using the power of suggestion directly to the subconscious mind to bring about lasting change.</p>
               <ul class="list-marked-2">
                 <li>Providing high-quality accounting & tax services</li>
                 <li>Sharing professional experience in tax management</li>
                 <li>Offering full support to all our clients</li>
+				<li>Addictive behaviours involving: alcohol, substance abuse, food, cigarettes, nail-biting. Hypnotherapy for quitting smoking, along with other kinds of addictions, does work. At Chelmsford Hypnotherapy, I have helped so many people overcome their addictions.</li>
+				<li>Weight loss therapy: By understanding the psychology behind managing your weight, you will find a new respect for yourself and your body. Weight loss therapy can and does work to help you manage your weight properly.</li>
+				<li>Anxiety therapy for related conditions: Hypnosis for OCD, phobias, panic attacks, PTSD.</li>
+				<li>Stress related conditions, fear of public speaking, overcoming fearful situations. At Chelmsford Hypnotherapy, you will learn how to manage and deal with stress.</li>
+				<li>Life coaching, self-empowerment, self-discovery, relaxation. I am registered Master Life Coach, here to help you wherever you are in your own journey. Life coaching can be transformational in helping us bring about the changes that promote growth and personal or professional development.</li>
+				<li>Hypnosis for Depression and bereavement can be very effective to help you gain control of your thoughts and feelings.</li>
+				<li>Hypnotherapy can help to alleviate physical symptoms associated with: IBS, back pain, dental procedures, childbirth, pain.</li>
+				
               </ul><a class="button button-primary" href="#">Read more</a>
             </div>
-            <div class="col-md-6">
-              <div class="row">
-                <div class="col-6">
-                  <!--Box counter-->
-                  <div class="box-counter">
-                    <div class="box-counter-main">
-                      <div class="counter">750</div>
-                    </div>
-                    <p class="box-counter-title">Satisfied Clients</p>
-                  </div>
-                </div>
-                <div class="col-6">
-                  <!--Box counter-->
-                  <div class="box-counter">
-                    <div class="box-counter-main">
-                      <div class="counter">68</div>
-                    </div>
-                    <p class="box-counter-title">Team Members</p>
-                  </div>
-                </div>
-                <div class="col-6">
-                  <!--Box counter-->
-                  <div class="box-counter">
-                    <div class="box-counter-main">
-                      <div class="counter">243</div>
-                    </div>
-                    <p class="box-counter-title">Successful Cases</p>
-                  </div>
-                </div>
-                <div class="col-6">
-                  <!--Box counter-->
-                  <div class="box-counter">
-                    <div class="box-counter-main">
-                      <div class="counter">99</div><span>%</span>
-                    </div>
-                    <p class="box-counter-title">Satisfaction Rate</p>
-                  </div>
-                </div>
-              </div>
-            </div>
+
           </div>
         </div>
       </section>
