--- a/JoSite/index.html
+++ b/JoSite/index.html
@@ -159,7 +159,7 @@ Hypnotherapy is a powerful process that helps in overcoming childhood trauma, re
             </div>
           </div>
         </div>
-        <div class="box-image-item box-image-video novi-background bg-image" style="background-image: url(images/Video1.png)"><a class="icon novi-icon fa fa-caret-right" href="https://youtube/bmZMXwJlhAo" data-lightgallery="item"></a></div>
+        <div class="box-image-item box-image-video novi-background bg-image" style="background-image: url(images/Video1.png)"><a class="icon novi-icon fa fa-caret-right" href="https://www.youtube.com/watch?v=NHSxYT2mnZA&t=70s" data-lightgallery="item"></a></div>
       </section>
       <!-- Our Mission-->
       <section class="section bg-default section-md">
