--- a/JoSite/index.html
+++ b/JoSite/index.html
@@ -159,7 +159,7 @@ Hypnotherapy is a powerful process that helps in overcoming childhood trauma, re
             </div>
           </div>
         </div>
-        <div class="box-image-item box-image-video novi-background bg-image" style="background-image: url("https://i.ytimg.com/vi_webp/bmZMXwJlhAo/maxresdefault.webp")"><a class="icon novi-icon fa fa-caret-right" href="https://www.youtube.com/embed/bmZMXwJlhAo?version=3&rel=1&showsearch=0&showinfo=1&iv_load_policy=1&fs=1&hl=en-GB&autohide=2&wmode=transparent" data-lightgallery="item"></a></div>
+        <div class="box-image-item box-image-video novi-background bg-image" style="background-image: url(images/Video1.PNG)"><a class="icon novi-icon fa fa-caret-right" href="https://www.youtube.com/embed/bmZMXwJlhAo?version=3&rel=1&showsearch=0&showinfo=1&iv_load_policy=1&fs=1&hl=en-GB&autohide=2&wmode=transparent" data-lightgallery="item"></a></div>
       </section>
       <!-- Our Mission-->
       <section class="section bg-default section-md">
