--- a/JoSite/index.html
+++ b/JoSite/index.html
@@ -263,7 +263,7 @@ Hypnotherapy is a powerful process that helps in overcoming childhood trauma, re
             </div>
           </div>
         </div>
-      </section><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid-big.jpg" alt="" height="0"></a>
+      </section>
       <footer class="section footer-classic">
         <div class="footer-inner-1">
           <div class="container">
