--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+  <script async
+	src="//book.timify.com/widget/widget.min.js"
+	id="timify-widget"
+	data-position="flexible"
+	data-locale="en-gb"></script>
+  
   </head>
   <body>
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
@@ -252,6 +258,10 @@
                 <div class="pricing-box-label bg-gray">once</div>
                 <p>Verifying goals <br> Setting Up Strategy <br> Zoom meeting</p>
 				<a class="button button-190 button-circle btn-primary-rounded" href="contacts.html">get started</a>
+				<div
+	class="timify-button"
+	data-account-id="635b9c2035bd2c9f31cb4519"
+>Book appointment online</div>
               </div>
             </div>
             <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
