--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
-  <script async
-	src="//book.timify.com/widget/widget.min.js"
-	id="timify-widget"
-	data-position="flexible"
-	data-locale="en-gb"></script>
-  
+<!-- Calendly link widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<!-- Calendly link widget end -->
+ 
   </head>
   <body>
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
@@ -97,6 +96,13 @@
         </div>
       </header>
       <!--Main section-->
+	  
+<!-- Calendly link widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/initial_session'});return false;">Initial Session</a>
+<!-- Calendly link widget end -->
+	  
       <section class="section main-section parallax-scene-js" style="background-image:url('images/bg-1-1700x803.jpg')">
         <div class="container">
           <div class="row justify-content-center">
@@ -257,12 +263,8 @@
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">39</span></div>
                 <div class="pricing-box-label bg-gray">once</div>
                 <p>Verifying goals <br> Setting Up Strategy <br> Zoom meeting</p>
-				<a class="button button-190 button-circle btn-primary-rounded" href="contacts.html">get started</a>
-				<div
-	class="timify-button"
-	data-account-id="635b9c2035bd2c9f31cb4519"
->Book appointment online</div>
-              </div>
+				<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/initial_session'});return false;">get started</a>
+			   </div>
             </div>
             <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
               <div class="pricing-box bg-gray-primary">
@@ -272,7 +274,7 @@
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">69</span></div>
                 <div class="pricing-box-label bg-gray-primary-light">1 session</div>
                 <p>Reprogramming Subconscious Mind <br> Inviting Abundance To Life <br> Zoom meeting</p>
-				<a class="button button-190 button-circle btn-rounded-outline" href="contacts.html">get started</a>
+				<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/changing_life_session'});return false;">get started</a>
               </div>
             </div>
             <div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
@@ -284,7 +286,8 @@
                 <div class="pricing-box-label bg-gray">5 sessions</div>
                 <p>Creating a new reality <br> Enhancing Spiritual Gifts <br> Zoom meetings</p>
 				<a class="button button-190 button-circle btn-primary-rounded" href="contacts.html">get started</a>
-              </div>
+				<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/investment_package'});return false;">get started</a>
+                </div>
             </div>
           </div>
         </div>
