--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
-<!-- Calendly link widget begin -->
-<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<!-- Calendly link widget end -->
- 
+	<!-- Calendly link widget begin -->
+	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+	<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+	<!-- Calendly link widget end -->
+	<script type="text/javascript" src="book/index.js"></script>
   </head>
   <body>
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
@@ -97,12 +97,12 @@
       </header>
       <!--Main section-->
 	  
-<!-- Calendly link widget begin -->
-<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/initial_session'});return false;">Initial Session</a>
-<!-- Calendly link widget end -->
-	  
+	<!-- Calendly link widget begin -->
+	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+	<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+	<a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/initial_session'});return false;">Initial Session</a>
+	<!-- Calendly link widget end -->
+		  
       <section class="section main-section parallax-scene-js" style="background-image:url('images/bg-1-1700x803.jpg')">
         <div class="container">
           <div class="row justify-content-center">
@@ -171,6 +171,8 @@
 					<div style="text-align: center;">www.coach-accreditation.services</div>-->
 				</a>
 				<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
+				<div align="center"><button type="button" id="view-pdf-btn" onclick="previewFile()" class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center">My Book</button></div>
+				<script type="text/javascript" src="https://documentservices.adobe.com/view-sdk/viewer.js"></script>
               </div>
             </div>
           </div>
