--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
 					<div style="text-align: center;">www.coach-accreditation.services</div>-->
 				</a>
 				<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
-				<div align="center"><button type="button" id="view-pdf-btn" onclick="previewFile()" class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center">My Book</button></div>
-				<script type="text/javascript" src="https://documentservices.adobe.com/view-sdk/viewer.js"></script>
+				<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="book_codependency.html">Book</a></div>
+				<!--<div align="center"><button type="button" id="view-pdf-btn" onclick="previewFile()" class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center">My Book</button></div>
+				<script type="text/javascript" src="https://documentservices.adobe.com/view-sdk/viewer.js"></script>-->
               </div>
             </div>
           </div>
