--- a/book_codependency.html
+++ b/book_codependency.html
@@ -5,9 +5,52 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="images/CF_LogoCircle.png" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="fonts/fontMonterrat.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/style.css">
+    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+	
   </head>
-  <body style="height: 1000px">
-	<embed id="frPDF" height="100%" width="100%" src="book/FightingCodependency.pdf"></embed>
+  <body style="height: 1000px; background-color: grey">
+	<div class="rd-navbar-wrap">
+	  <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-static" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
+  
+		<div class="rd-navbar-main-outer">
+		  <div class="rd-navbar-main">
+			<!--RD Navbar Panel-->
+			<div class="rd-navbar-panel">
+			  <!--RD Navbar Toggle-->
+			  <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
+			  <!--RD Navbar Brand-->
+			  <div class="rd-navbar-brand">
+				<!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/><img class="brand-logo-light" src="images/logo-inverse-200x34.png" alt="" width="100" height="17"/></a>
+			  </div>
+			</div>
+			<div class="rd-navbar-main-element">
+			  <div class="rd-navbar-nav-wrap">
+				<ul class="rd-navbar-nav">
+				  <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
+				  </li>
+				  <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
+				  </li>
+				  <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a>
+				  </li>
+				  <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
+				  </li>
+				</ul>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </nav>
+	</div>
+	
+	<embed style="padding-top: 83px" id="frPDF" height="100%" width="100%" src="book/FightingCodependency.pdf"></embed>
+    
+	<script src="js/core.min.js"></script>
+    <script src="js/script.js"></script>
 
   </body>
 </html>
