--- a/about.html
+++ b/about.html
@@ -75,7 +75,10 @@
                       <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                       </li>
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="about.html">About</a>
+					  </li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="book_codependency.html">Book</a>
                       </li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                       </li>
                     </ul>
