--- a/book_codependency.html
+++ b/book_codependency.html
@@ -31,10 +31,9 @@
 			<div class="rd-navbar-main-element">
 			  <div class="rd-navbar-nav-wrap">
 				<ul class="rd-navbar-nav">
-				  <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
-				  </li>
-				  <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
-				  </li>
+				  <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a></li>
+				  <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a></li>
+				  <li class="rd-nav-item"><a class="rd-nav-link" href="book_codependency.html">Book</a></li>
 				  <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a>
 				  </li>
 				  <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
