--- a/contacts.html
+++ b/contacts.html
@@ -76,6 +76,8 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
                       </li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="book_codependency.html">Book</a></li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a></li>
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                       </li>
                     </ul>
