--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 	<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 	<!-- Calendly link widget end -->
-	<script type="text/javascript" src="book/index.js"></script>
   </head>
   <body>
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
@@ -82,6 +81,8 @@
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
+                      </li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="book_codependency.html">Book</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a>
                       </li>
