--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
 					<div style="text-align: center;">www.coach-accreditation.services</div>-->
 				</a>
 				<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
-				<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="book_codependency.html">Book</a></div>
-				<!--<div align="center"><button type="button" id="view-pdf-btn" onclick="previewFile()" class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center">My Book</button></div>
-				<script type="text/javascript" src="https://documentservices.adobe.com/view-sdk/viewer.js"></script>-->
+				<!--<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="book_codependency.html">Book</a></div>-->
+				</br>
+				<div align="center"><a href="book_codependency.html"><img src="book/FightingCodependency1Cover.png" alt="Fighting Codependency" style="width:220px;height:220px;"></a></div>
               </div>
             </div>
           </div>
