--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 </div>
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay=".5s">
                   <div class="box-default">
-                    <div class="box-default-title">Counselling</div>
+                    <div class="box-default-title">Counseling</div>
                     <p class="box-default-description">
 						There are no small problems. 
 						You are not meant to just cope with them. 
