--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
 					<div style="text-align: center;">www.coach-accreditation.services</div>-->
 				</a>
 				<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
+               <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
+					I can help people with a narcissistic personality disorder. 
+					Bringing relief to their childhood neglect and showing them how to trust and love.
+					</p>				
 				<!--<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="book_codependency.html">Book</a></div>-->
 				</br>
 				<div align="center"><a href="book_codependency.html"><img src="book/FightingCodependency1Cover.png" alt="Fighting Codependency" style="width:220px;height:220px;"></a></div>
