--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 					How to transmute pain into creativity and grow at my own pace towards wherever my imagination can take me.   
 					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to the Earth of the new frequency.  
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
-					might have been triggered by narcissistic abuse or painful experiences. 
+					might have been triggered by <span class="default-letter-spacing font-weight-bold ">narcissistic abuse</span> or painful experiences. 
 					I help my clients to refocus from trauma bond, cognitive dissonance, or narcissistic abuse towards their potential and start exploring its true nature.</p>
                 <!--<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I am Accredited Elite Life Coach, Level 5, Certified by the IAPC&M</p>
 				<a href="https://coach-accreditation.services/" target="_blank">
@@ -173,12 +173,12 @@
 				</a>
 				<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
                <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
-					I can help people with a narcissistic personality disorder. 
+					I can help people with a <span class="default-letter-spacing font-weight-bold ">narcissistic personality disorder</span>. 
 					Bringing relief to their childhood neglect and showing them how to trust and love.
 					</p>				
 				<!--<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="book_codependency.html">Book</a></div>-->
 				</br>
-				<div align="center"><a href="book_codependency.html"><img src="book/FightingCodependency1Cover.png" alt="Fighting Codependency" style="width:220px;height:220px;"></a></div>
+				<div align="center"><a href="book_codependency.html"><img src="book/LeavingWithNPD.png" alt="Leaving with NPD" style="width:220px;height:220px;">Leaving with NPD</a></div>
               </div>
             </div>
           </div>
