--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">299</span></div>
                 <div class="pricing-box-label bg-gray">5 sessions</div>
                 <p>Creating a new reality <br> Enhancing Spiritual Gifts <br> Zoom meetings</p>
-				<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/meeting'});return false;">get started</a>
+				<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/meeting'});return false;">book first session</a>
               </div>
             </div>
           </div>
