--- a/index.html
+++ b/index.html
@@ -176,9 +176,8 @@
 					I can help people with a <span class="default-letter-spacing font-weight-bold ">narcissistic personality disorder</span>. 
 					Bringing relief to their childhood neglect and showing them how to trust and love.
 					</p>				
-				<!--<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="book_codependency.html">Book</a></div>-->
 				</br>
-				<div align="center"><a href="book_codependency.html"><img src="book/LeavingWithNPD.png" alt="Leaving with NPD" style="width:220px;height:220px;">Leaving with NPD</a></div>
+				<div align="center"><a href="book_leavingwithNPD.html"><img src="book/LeavingWithNPD.png" alt="Leaving with NPD" style="width:220px;height:220px;">Leaving with NPD</a></div>
               </div>
             </div>
           </div>
