--- a/book_leavingwithNPD.html
+++ b/book_leavingwithNPD.html
@@ -47,7 +47,7 @@
 	  </nav>
 	</div>
 	
-	<embed style="padding-top: 83px" id="frPDF" height="100%" width="100%" src="https://docs.google.com/viewer/viewer?url=http://choosefrequency/book/LeavingWithNPD.pdf"></embed>
+	<embed style="padding-top: 83px" id="frPDF" height="100%" width="100%" src="https://docs.google.com/viewer/viewer?url=https://choosefrequency/book/LeavingWithNPD.pdf"></embed>
     
 	<script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
