--- a/book_leavingwithNPD.html
+++ b/book_leavingwithNPD.html
@@ -26,7 +26,7 @@
 			  <!--RD Navbar Brand-->
 			  <div class="rd-navbar-brand">
 				<!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/>
-				<img class="brand-logo-light" src="images/logo-inverse-200x34.png" alt="" width="100" height="17"/></a>
+<img class="brand-logo-light" src="images/logo-inverse-200x34.png" alt="" width="100" height="17"/></a>
 			  </div>
 			</div>
 			<div class="rd-navbar-main-element">
@@ -47,7 +47,7 @@
 	  </nav>
 	</div>
 	
-	<embed style="padding-top: 83px" id="frPDF" height="100%" width="100%" src="https://docs.google.com/viewer/viewer?url=https://choosefrequency/book/LeavingWithNPD.pdf"></embed>
+	<embed style="padding-top: 83px" id="frPDF" height="100%" width="100%" src="book/LeavingWithNPD.pdf"></embed>
     
 	<script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
